--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -17,5 +17,8 @@ jobs:
     - name: Build the Docker image
       run: docker build -t mchelmbot .
 
-    - name: Pushimage
+    - name: Login Docker Hub
+      run: docker login -u ${{ secrets.LOGINDOCKERHUB }} -p ${{ secrets.DOCKERTOKEN }}
+
+    - name: Push image
       run: docker push mchelmbot
