--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,10 +15,10 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Build the Docker image
-      run: docker build -t mchelmbot .
+      run: docker build -t saddydead1/mchelmbot .
 
     - name: Login Docker Hub
       run: docker login -u ${{ secrets.LOGINDOCKERHUB }} -p ${{ secrets.DOCKERTOKEN }}
 
     - name: Push image
-      run: docker push mchelmbot
+      run: docker push saddydead1/mchelmbot
